Alterando Skinlife para Pink-Clound

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Skinlife</title>
+    <title>Pink-Clound</title>
 </head>
 
 <body>
-    <header>Skinlife</header>
+    <header>Pink-Clound</header>
 
     <section class="chamada">
             <div class="chamada-texto">
